Added missing endpoints to api doc
