# src/main/java/com/eliasfb/bgn/controller/ImportController.java
@@ -1,52 +1,33 @@
 package com.eliasfb.bgn.controller;
 
-/*@CrossOrigin(origins = "*", maxAge = 3600)
-@RestController
-@RequestMapping({"/import"})*/
-public class ImportController {
+import com.eliasfb.bgn.openapi.api.ImportApi;
+import com.eliasfb.bgn.openapi.model.ResponseDto;
+import com.eliasfb.bgn.service.ImportService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.CrossOrigin;
 
-  /*@Autowired private ImportService service;
+import java.io.IOException;
 
-  @PostMapping()
-  public ResponseDto importAll() {
+import static com.eliasfb.bgn.service.GameService.OK_CODE;
+
+@CrossOrigin(origins = "*", maxAge = 3600)
+@Controller
+public class ImportController implements ImportApi {
+
+  @Autowired private ImportService service;
+
+  @Override
+  public ResponseEntity<ResponseDto> importAll() {
     try {
       String finalMessage = this.service.importPlayers().getMessage();
       finalMessage += " / " + this.service.importGames().getMessage();
       finalMessage += " / " + this.service.importPlays().getMessage();
-      return new ResponseDto().errorCode(OK_CODE).message(finalMessage);
+      return ResponseEntity.ok(new ResponseDto().errorCode(OK_CODE).message(finalMessage));
     } catch (IOException e) {
       e.printStackTrace();
-      return new ResponseDto().errorCode(-1).message(e.toString());
+      return ResponseEntity.ok(new ResponseDto().errorCode(-1).message(e.toString()));
     }
   }
-
-  @PostMapping(path = {"/players"})
-  public ResponseDto importPlayers() {
-    try {
-      return this.service.importPlayers();
-    } catch (IOException e) {
-      e.printStackTrace();
-      return new ResponseDto().errorCode(-1).message(e.toString());
-    }
-  }
-
-  @PostMapping(path = {"/games"})
-  public ResponseDto importGames() {
-    try {
-      return this.service.importGames();
-    } catch (IOException e) {
-      e.printStackTrace();
-      return new ResponseDto().errorCode(-1).message(e.toString());
-    }
-  }
-
-  @PostMapping(path = {"/plays"})
-  public ResponseDto importPlays() {
-    try {
-      return this.service.importPlays();
-    } catch (IOException e) {
-      e.printStackTrace();
-      return new ResponseDto().errorCode(-1).message(e.toString());
-    }
-  }*/
 }
