# src/main/java/com/eliasfb/bgn/dto/game/GameLocationUpdateDto.java
@@ -1,8 +1,0 @@
-package com.eliasfb.bgn.dto.game;
-
-import lombok.Data;
-
-@Data
-public class GameLocationUpdateDto {
-  private Integer locationId;
-}
